--- a/.github/workflows/main_test3modelviewer.yml
+++ b/.github/workflows/main_test3modelviewer.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write  
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
@@ -16,11 +19,11 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_431F4B6DD6194A7BA23D45A097561580 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_768EBEEB69BB458292532B1CA55C4ED9 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_B087062C4D924367BEDB457268F45627 }}
+          client-id: ${{secrets.AZUREAPPSERVICE_CLIENTID_431F4B6DD6194A7BA23D45A097561580 }}
+          tenant-id: ${{secrets.AZUREAPPSERVICE_TENANTID_768EBEEB69BB458292532B1CA55C4ED9}}
+          subscription-id: ${{secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_B087062C4D924367BEDB457268F45627}}
 
-      - name: Deploy to Azure Web App
+      - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'test3modelviewer'
